[package]
name = "enforcement_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.0-beta.4"
ic-cdk = "0.9.2"
#ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
